[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Event.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Event" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0.803922, 0, 1, 1 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Speaker" type="AudioStreamPlayer" parent="."]

[node name="TimerStart" type="Timer" parent="."]
wait_time = 0.03
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Event_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="TimerStart" to="." method="_on_TimerStart_timeout"]
